--- a/counter.html
+++ b/counter.html
@@ -23,6 +23,17 @@
            }
          }
 
+        increment(event) {
+          this.setState({
+            number: this.state.number + 1
+          })
+        }
+ 
+        decrement(event) {
+          this.setState({
+            number: Math.max(1, this.state.number - 1)
+          })
+        }
       
 
         render() {
@@ -31,6 +42,8 @@
               <img src={this.props.image} alt="Bloc Logo"/>
               <h2>Current program: {this.props.label}</h2>
               <h3>Current week: {this.state.number}</h3>
+              <button onClick={this.increment.bind(this)}>Increment</button>
+              <button onClick={this.decrement.bind(this)}>Decrement</button>
               <h4>Current update: {this.state.update}</h4>
               <p>Current Date: {this.props.date.toLocaleDateString()}</p>
             </div>
